--- a/public/style.css
+++ b/public/style.css
@@ -77,6 +77,8 @@ footer {
     border-radius: 10px;
     margin-bottom: 10px;
     cursor: pointer;
+
+    align-self: center;
 }
 
 /* -----------------------------------------------------------------------
