--- a/views/petition.handlebars
+++ b/views/petition.handlebars
@@ -15,9 +15,14 @@
 
         <label for="signature">Signature</label>
         <input id="signature" type="text" name="signature" />
-        <canvas width="250px" height="100px" id="signature-canva"></canvas>
 
-        <button type="submit">Submit</button>
+        <canvas width="350" height="100" id="signature-canva"></canvas>
+
+        <div class="buttons-container">
+            <button type="submit" id="button-submit">Submit</button>
+            <button type="button" id="button-reset-canva">Reset Canva</button>
+        </div>
+
     </form>
 
 </section>
