--- a/views/signers.handlebars
+++ b/views/signers.handlebars
@@ -3,7 +3,10 @@
 
     <ul>
         {{#listOfSigners}}
-            <li><p>{{first}} {{last}} </p></li>
+            <li><p>{{first}} {{last}} </p>
+                <img src="{{signature}}" />
+            </li>
+
         {{/listOfSigners}}
 
     </ul>
