--- a/views/signers.handlebars
+++ b/views/signers.handlebars
@@ -1,12 +1,6 @@
 <section class="signers">
     <h1>List of the singers</h1>
 
-    <ul>
-        {{#listOfSigners}}
-            <li><p>{{first}} {{last}} </p>
-            </li>
+   {{> listSigners withImage=false}}
 
-        {{/listOfSigners}}
-
-    </ul>
 </section>
