--- a/public/style.css
+++ b/public/style.css
@@ -52,7 +52,7 @@ footer {
 .petition-form {
     display: flex;
     flex-direction: column;
-    width: 80%;
+    width: 40%;
     margin: 10px;
 }
 
@@ -65,13 +65,6 @@ footer {
     margin-bottom: 10px;
 }
 
-.petition-form button {
-    height: 25px;
-    width: 150px;
-    border-radius: 9px;
-    border: 1.5 solid rgb(164, 100, 224);
-}
-
 .petition-form canvas {
     background-color: aliceblue;
     border-radius: 10px;
@@ -81,15 +74,39 @@ footer {
     align-self: center;
 }
 
+.petition-form .buttons-container {
+    text-align: center;
+}
+
+.petition-form button {
+    height: 25px;
+    width: 150px;
+    border-radius: 9px;
+    border: 1.5 solid rgb(164, 100, 224);
+}
+
 /* -----------------------------------------------------------------------
                         Thanks Section
 --------------------------------------------------------------------------*/
+.thanks {
+    text-align: center;
+}
+.thanks h1 {
+    margin: 10px;
+}
+
+.thanks ul {
+    margin-bottom: 10px;
+}
 
 /* -----------------------------------------------------------------------
                         Signers Section
 --------------------------------------------------------------------------*/
 .signers {
     text-align: center;
+}
+.signers li {
+    margin-bottom: 25px;
 }
 .signers h1 {
     margin: 10px;
