--- a/views/petition.handlebars
+++ b/views/petition.handlebars
@@ -14,7 +14,7 @@
         <input id="surname" type="text" name="surname" required />
 
         <label for="signature">Signature</label>
-        <input id="signature" type="text" name="signature" />
+        <input id="signature" type="hidden" name="signature" />
 
         <canvas width="350" height="100" id="signature-canva"></canvas>
 
