Reorganize and Added new Handlebars pages

--- a/views/petition.handlebars
+++ b/views/petition.handlebars
@@ -6,7 +6,7 @@
             <p>Oops! an Error has occurred. Please try again</p>
         {{/if}}
     </div>
-    <form class="petition-form" method="post" action="/petition">
+    <form class="petition-form form-container" method="post" action="/petition">
         <label for="name">Name</label>
         <input id="name" type="text" name="name" required />
 
