--- a/views/thanks.handlebars
+++ b/views/thanks.handlebars
@@ -5,6 +5,6 @@
    {{> listSigners withImage=true}}
 
 
-    <p>See all <a href="/petition/signers"> {{totalSigners}} Signers </a> </p>
+    <p>See all <a href="/signers"> {{totalSigners}} Signers </a> </p>
 
 </section>
