--- a/public/style.css
+++ b/public/style.css
@@ -12,7 +12,7 @@ body {
     background-color: rgb(203, 181, 224);
     display: flex;
     flex-direction: column;
-    height: 100vh;
+    min-height: 100vh;
 }
 header {
     width: 100%;
@@ -22,6 +22,9 @@ main {
     width: 100%;
     min-height: 500px;
     flex-grow: 1;
+
+    display: flex;
+    flex-direction: row;
 }
 footer {
     width: 100%;
@@ -29,14 +32,29 @@ footer {
 }
 
 /* -----------------------------------------------------------------------
-                        Petition Section
+                        Information Section
 --------------------------------------------------------------------------*/
+.info-seccion {
+    max-width: 50%;
+    padding: 20px;
+}
+
+/* -----------------------------------------------------------------------
+                        Log In Section
+--------------------------------------------------------------------------*/
+.logIn-section,
+.register-section,
 .petition {
+    flex-grow: 4;
     min-height: 100px;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
+
+/* -----------------------------------------------------------------------
+                        Petition Section
+--------------------------------------------------------------------------*/
 
 .petition h1 {
     margin: 10px;
@@ -49,14 +67,14 @@ footer {
     text-align: center;
 }
 
-.petition-form {
+.form-container {
     display: flex;
     flex-direction: column;
-    width: 40%;
+    width: 80%;
     margin: 10px;
 }
 
-.petition-form input {
+.form-container input {
     /* width: 80%; */
     height: 25px;
     border: none;
@@ -74,12 +92,12 @@ footer {
     align-self: center;
 }
 
-.petition-form .buttons-container {
+.form-container .buttons-container {
     text-align: center;
 }
 
-.petition-form button {
-    height: 25px;
+.form-container button {
+    height: 35px;
     width: 150px;
     border-radius: 9px;
     border: 1.5 solid rgb(164, 100, 224);
