--- a/views/logIn.handlebars
+++ b/views/logIn.handlebars
@@ -7,17 +7,17 @@
 
     <div class="error">
         {{#if error}}
-            <p>Oops! an Error has occurred. Please try again</p>
+            <p> {{errorFiled}} Incorrect. Please try again</p>
         {{/if}}
     </div>
 
-    <form class="logIn-form form-container"  method="post" action="/petition">
+    <form class="logIn-form form-container"  method="post" action="/login">
 
         <label for="email">E-mail</label>
         <input id="email" type="email" name="email" required />
 
-        <label for="email">Password</label>
-        <input id="email" type="password" name="email" required />
+        <label for="password">Password</label>
+        <input id="password" type="password" name="password" required />
 
           <div class="buttons-container">
             <button type="submit">Login</button>
