--- a/views/signers.handlebars
+++ b/views/signers.handlebars
@@ -1,4 +1,4 @@
-<section class="signers">
+<section class="signers-section">
     <h1>List of the singers</h1>
 
    {{> listSigners withImage=false}}
