--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,7 +1,7 @@
 {{> information}}
 
 
-<section class="register-section">
+<section class="register-section section-container">
         <h1>Sign In</h1>
 
     <div class="error">
@@ -33,6 +33,5 @@
     </form>
     <p>Do you already have an account? <a href="/login">Log In</a></p>
 
-   
 
 </section>
