--- a/views/logIn.handlebars
+++ b/views/logIn.handlebars
@@ -1,7 +1,6 @@
-   {{> information}}
+{{> information}}
 
-
-<section class="logIn-section">
+<section class="logIn-section section-container">
 
     <h1>Login</h1>
 
@@ -23,4 +22,6 @@
             <button type="submit">Login</button>
         </div>
     </form>
+    <p>Don't have an account? <a href="/home">Sign up</a></p>
+
 </section>
