--- a/public/style.css
+++ b/public/style.css
@@ -16,7 +16,8 @@ body {
 }
 header {
     width: 100%;
-    height: 70px;
+    height: 50px;
+    background-color: rgb(65, 33, 95);
 }
 main {
     width: 100%;
@@ -31,6 +32,27 @@ footer {
     height: 30px;
 }
 
+nav {
+    width: 100%;
+    text-align: right;
+    margin: 10px 0;
+    padding: 0 10px;
+}
+
+/* -----------------------------------------------------------------------
+                        Navbar
+--------------------------------------------------------------------------*/
+nav a {
+    margin: 10px;
+    text-decoration: none;
+    font-size: 20px;
+    color: rgb(247, 247, 247);
+}
+
+nav a:hover {
+    color: rgb(231, 235, 116);
+}
+
 /* -----------------------------------------------------------------------
                         Information Section
 --------------------------------------------------------------------------*/
@@ -42,29 +64,13 @@ footer {
 /* -----------------------------------------------------------------------
                         Log In Section
 --------------------------------------------------------------------------*/
-.logIn-section,
-.register-section,
-.petition {
+.section-container {
     flex-grow: 4;
     min-height: 100px;
     display: flex;
     flex-direction: column;
     align-items: center;
-}
-
-/* -----------------------------------------------------------------------
-                        Petition Section
---------------------------------------------------------------------------*/
-
-.petition h1 {
-    margin: 10px;
-}
-
-.petition .error {
-    height: 20px;
-    width: 80%;
-    border: 1 solid black;
-    text-align: center;
+    padding-top: 20px;
 }
 
 .form-container {
@@ -104,6 +110,21 @@ footer {
 }
 
 /* -----------------------------------------------------------------------
+                        Petition Section
+--------------------------------------------------------------------------*/
+
+.petition-section h1 {
+    margin: 10px;
+}
+
+.petition-section .error {
+    height: 20px;
+    width: 80%;
+    border: 1 solid black;
+    text-align: center;
+}
+
+/* -----------------------------------------------------------------------
                         Thanks Section
 --------------------------------------------------------------------------*/
 .thanks-section {
@@ -131,4 +152,39 @@ footer {
 }
 .signers-section p {
     margin: 5px;
+}
+
+/* -----------------------------------------------------------------------
+                        Configuration Section
+--------------------------------------------------------------------------*/
+.configuration-section {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.configuration-section img {
+    width: 150;
+    border-radius: 50%;
+    background-color: white;
+    object-fit: cover;
+}
+
+.configuration-section div {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.configuration-section a {
+    text-decoration: none;
+    /* font-size: 20px; */
+    color: black;
+}
+
+.config-tag {
+    margin: 8px 0;
 }
