--- a/views/thanks.handlebars
+++ b/views/thanks.handlebars
@@ -1,9 +1,13 @@
-<section class="thanks-section">
+<section class="thanks-section section-container">
     <h1>Thank you for signing our petition!</h1>
-    <br>
+    <br />
 
-   {{> listSigners withImage=true}}
+    {{#user}}
 
+        <p>{{first}} {{last}} </p>
+        <img src="{{signature}}" />
+
+    {{/user}}
 
     <p>See all <a href="/signers"> {{totalSigners}} Signers </a> </p>
 
