Commit Before Heroku: Data B change, but not tested

--- a/views/configProfile.handlebars
+++ b/views/configProfile.handlebars
@@ -39,16 +39,10 @@
             />
 
             <label for="age">Age</label>
-            <input id="age" type="number" name="age" value="{{age}}" required />
+            <input id="age" type="number" name="age" value="{{age}}" />
 
             <label for="city">City</label>
-            <input
-                id="city"
-                type="text"
-                name="city"
-                value="{{city}}"
-                required
-            />
+            <input id="city" type="text" name="city" value="{{city}}" />
 
             <label for="homePage">Home Page</label>
             <input
@@ -56,7 +50,6 @@
                 type="text"
                 name="homePage"
                 value="{{homePage}}"
-                required
             />
 
             {{! Here or do a nuw section }}
