--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -18,6 +18,7 @@
                     <a href="/petition">Petition</a>
                     <a href="/signers">List of Signers</a>
                     <a href="/configuration">Configuration</a>
+                    <a href="/logout">Log Out</a>
 
                 </nav>
             {{/if}}
