Adding 3 tables. Not working

--- a/views/configuration.handlebars
+++ b/views/configuration.handlebars
@@ -1,23 +1,25 @@
 <section class="configuration-section">
 
     <div>
-        <a href="/profile"><img src="/img/profile.png" /></a>
-        <a class="config-tag" href="/profile">Profile</a>
+        <a href="/configuration/profile"><img src="/img/profile.png" /></a>
+        <a class="config-tag" href="/configuration/profile">Profile</a>
     </div>
 
     <div>
-        <a href="/signature"><img src="/img/signature.webp" /></a>
-        <a class="config-tag" href="/signature">Signature</a>
+        <a href="/configuration/signature"><img src="/img/signature.webp" /></a>
+        <a class="config-tag" href="/configuration/signature">Signature</a>
     </div>
 
     <div>
-        <a href="/newpassword"><img src="/img/password.png" /></a>
-        <a class="config-tag" href="/newpassword">New Password</a>
+        <a href="/configuration/newpassword"><img src="/img/password.png" /></a>
+        <a class="config-tag" href="/configuration/newpassword">New Password</a>
     </div>
 
     <div>
-        <a href="/deleteAccount"><img src="/img/deleteAccount.webp" /></a>
-        <a class="config-tag" href="/deleteAccount">Delete Account</a>
+        <a href="/configuration/deleteAccount"><img
+                src="/img/deleteAccount.webp"
+            /></a>
+        <a class="config-tag" href="/configuration/deleteAccount">Delete Account</a>
     </div>
 
 </section>
