--- a/views/moreInfo.handlebars
+++ b/views/moreInfo.handlebars
@@ -15,8 +15,8 @@
         <label for="city">City</label>
         <input id="city" type="text" name="city" />
 
-        <label for="homePage">Home Page</label>
-        <input id="homePage" type="text" name="homePage" />
+        <label for="profilePage">Home Page</label>
+        <input id="profilePage" type="text" name="profilePage" />
 
         <div class="buttons-container">
             <button type="submit">Save Changes</button>
