--- a/views/moreInfo.handlebars
+++ b/views/moreInfo.handlebars
@@ -16,7 +16,7 @@
         <input id="city" type="text" name="city" />
 
         <label for="profilePage">Home Page</label>
-        <input id="profilePage" type="text" name="profilePage" />
+        <input id="profilePage" type="url" name="profilePage" />
 
         <div class="buttons-container">
             <button type="submit">Save Changes</button>
