--- a/views/signature.handlebars
+++ b/views/signature.handlebars
@@ -1,6 +1,17 @@
 <section class="signature-section section-container">
 
-    <img src="{{signature}}" />
+    <form class="form-container" method="post">
 
-    <p>Are you sure that you want to delete your signature</p>
+        <img src="{{signature}}" />
+
+        <h3>Are you sure that you want to delete your signature</h3>
+
+        <div class="buttons-container">
+
+            <button type="submit">Confirm</button>
+            <a href="/configuration" class="likeButton">Cancel</a>
+
+        </div>
+
+    </form>
 </section>
