--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -16,6 +16,7 @@
                 IF THE USER ALLREADY SIGN: }}
                     {{!  }}
                     {{#if haveSign}}
+                        <a href="/thanks">Home</a>
                         <a href="/signers">List of Signers</a>
                     {{else}}
                         <a href="/petition">Petition</a>
