--- a/views/newPassword.handlebars
+++ b/views/newPassword.handlebars
@@ -4,6 +4,9 @@
 
         <h3>Change Password</h3>
 
+            {{>message}}
+
+
         <label for="password">NEW Password</label>
         <input id="password" type="password" name="new" required />
 
