--- a/views/partials/information.handlebars
+++ b/views/partials/information.handlebars
@@ -1,11 +1,8 @@
 <section class="info-seccion">
     {{! PUT HERE THE INFO OF THE PETITON: }}
 
-    <h1>Are you with me?</h1>
+    <h1>Tired of not founfing your favorite product in the supermarket?</h1>
     <p>
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Est debitis
-        quis, eos, excepturi aspernatur animi provident consequuntur quo quia
-        temporibus in doloremque accusamus! Tenetur odio facere temporibus,
-        impedit nihil corporis!
+        Tired of not founding
     </p>
 </section>
