--- a/views/signature.handlebars
+++ b/views/signature.handlebars
@@ -1,5 +1,7 @@
 <section class="signature-section section-container">
 
+    {{>message}}
+
     <form class="form-container" method="post">
 
         <img src="{{signature}}" />
