--- a/views/logIn.handlebars
+++ b/views/logIn.handlebars
@@ -4,11 +4,8 @@
 
     <h1>Login</h1>
 
-    <div class="error">
-        {{#if error}}
-            <p> {{errorFiled}} Incorrect. Please try again</p>
-        {{/if}}
-    </div>
+      {{>message}}
+
 
     <form class="logIn-form form-container"  method="post" action="/login">
 
